force-app/main/default/objects/Contact/fields/Barangay_Sitio__c.field-meta.xml
<CustomField>
    <fullName>Barangay_Sitio__c</fullName>
    <label>Barangay / Sitio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Barangays</valueSetName>
    </valueSet>
</CustomField>