force-app/main/default/objects/Contact/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <label>Complete Address</label>
    <type>TextArea</type>
</CustomField>