force-app/main/default/objects/Contact/fields/Enable_POS__c.field-meta.xml
<CustomField>
    <fullName>Enable_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable POS</label>
    <type>Checkbox</type>
</CustomField>