force-app/main/default/objects/Contact/fields/Enable_Void_Order__c.field-meta.xml
<CustomField>
    <fullName>Enable_Void_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Void Order</label>
    <type>Checkbox</type>
</CustomField>