force-app/main/default/objects/Contact/fields/Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Land_Mark__c</fullName>
    <label>Land Mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>