force-app/main/default/objects/Contact/fields/Manage_Cash_Drawers__c.field-meta.xml
<CustomField>
    <fullName>Manage_Cash_Drawers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Cash Drawers</label>
    <type>Checkbox</type>
</CustomField>