force-app/main/default/objects/Contact/fields/Manage_Employees__c.field-meta.xml
<CustomField>
    <fullName>Manage_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Employees</label>
    <type>Checkbox</type>
</CustomField>