force-app/main/default/objects/Contact/fields/Manage_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Manage_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Inventory</label>
    <type>Checkbox</type>
</CustomField>