force-app/main/default/objects/Contact/fields/Municipality_City__c.field-meta.xml
<CustomField>
    <fullName>Municipality_City__c</fullName>
    <label>Municipality / City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Municipalities_Cities</valueSetName>
    </valueSet>
</CustomField>