force-app/main/default/objects/Contact/fields/PagIbig_Id__c.field-meta.xml
<CustomField>
    <fullName>PagIbig_Id__c</fullName>
    <label>PagIbig Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>