force-app/main/default/objects/Contact/fields/PhilHealth_Id__c.field-meta.xml
<CustomField>
    <fullName>PhilHealth_Id__c</fullName>
    <label>PhilHealth Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>