force-app/main/default/objects/Contact/fields/PWD_Id__c.field-meta.xml
<CustomField>
    <fullName>PWD_Id__c</fullName>
    <label>PWD Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>