force-app/main/default/objects/Contact/fields/Sr_Citizen_Id__c.field-meta.xml
<CustomField>
    <fullName>Sr_Citizen_Id__c</fullName>
    <label>Sr Citizen Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>