force-app/main/default/objects/Contact/fields/SSS_Id__c.field-meta.xml
<CustomField>
    <fullName>SSS_Id__c</fullName>
    <label>SSS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>