force-app/main/default/objects/Contact/fields/TIN_Id__c.field-meta.xml
<CustomField>
    <fullName>TIN_Id__c</fullName>
    <label>TIN Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>