force-app/main/default/objects/Contact/recordTypes/Corporate_Company.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Company</fullName>
    <active>true</active>
    <label>Corporate / Company</label>
</RecordType>